--- a/shops.html
+++ b/shops.html
@@ -86,18 +86,18 @@
                                     </div>
                                     <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                                         <ul class="nav navbar-nav">
-                                            <li class="active"><a href="index.html">Products & shops</a></li>
-                                            <li><a href="aboutsudc.html">About SUDC card</a></li>
-                                            <li><a href="Membership.html">Membership</a></li>
+                                            <li class="active"><a href="shops.html">Products & shops</a></li>
+                                            <li><a href="about_card.html">About SUDC card</a></li>
+                                            <li><a href="membership.html">Membership</a></li>
 
                                             <li class="dropdown">
                                                 <a href="" class="dropdown-toggle excess_menu" id="othersubmenuhead" data-toggle="dropdown" data-hover="dropdown" role="button">
                                                     . . .  
                                                 </a>
                                                 <ul class="dropdown-menu dropdownhover-bottom" role="menu" id="othersubmenuhead">
-                                                    <li><a data-toggle="modal" data-target="#loginModal">Login</a></li>
-                                                    <li><a data-toggle="modal" data-target="#signUpModal">Register</a></li>
-                                                    <li><a href="unique.html">User profile</a></li>
+                                                    <li><a href="product_lists.html">Product list</a></li>
+                                                    <li><a  href="shop_detail.html">Shop details</a></li>
+                                                    <li><a href="product_item.html">Product item</a></li>
                                                 </ul>
                                             </li>
 
@@ -110,7 +110,7 @@
                                                 <ul class="dropdown-menu dropdownhover-bottom" role="menu" id="submenucotent">
                                                     <li><a data-toggle="modal" data-target="#loginModal">Login</a></li>
                                                     <li><a data-toggle="modal" data-target="#signUpModal">Register</a></li>
-                                                    <li><a href="unique.html">User profile</a></li>
+                                                    <li><a href="userprofile.html">User profile</a></li>
                                                 </ul>
                                             </li>
                                         </ul>
@@ -419,9 +419,9 @@
                                     <p class="mt20">  
                                         <input type="text" id="amountStart" class="prc_rte" readonly="">
                                         <input type="text" id="amountEnd" class="prc_rte" readonly="">
-                                    
+
                                     </p>
-                                    
+
                                 </div>
                             </div>
                         </div>
@@ -631,55 +631,50 @@
                     <div class="col-md-2 col-sm-4 footer_height">
                         <h4>About SUDC card</h4>
                         <ul>
-                            <li class="active"><a href="#">About SUDC card</a></li>
-                            <li><a href="aboutus.html">How it works?</a>
-                            <li><a href="history.html">Memberships</a></li>
-                            <li><a href="mission.html">Member's benifits</a></li>
-                            <li><a href="causes.html">Member's testimonials</a></li>
+                            <li class="active"><a href="about_card.html">About SUDC card</a></li>
+                            <li><a href="how_it_works.html">How it works?</a>
+                            <li><a href="membership.html">Memberships</a></li>
+                            <li><a href="customerbenfits.html">Member's benifits</a></li>
+                            <li><a href="testimonial.html">Member's testimonials</a></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-sm-4 footer_height">
                         <h4>Company</h4>
                         <ul>
-                            <li class="active"><a href="index.html">About company</a></li>
-                            <li><a href="aboutus.html">Core values</a>
-                            <li><a href="history.html">News and Events</a></li>
-                            <li><a href="mission.html">Careers</a></li>
-                            <li><a href="causes.html">Site map</a></li>
+                            <li class="active"><a href="about_company.html">About company</a></li>
+                            <li><a href="core_value.html">Core values</a>
+                            <li><a href="news_events.html">News and Events</a></li>
+                            <li><a href="careers.html">Careers</a></li>
+                            <li><a href="site_map.html">Site map</a></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-sm-4 footer_height">
                         <h4>SUDC business</h4>
                         <ul>
                             <li class="active"><a href="index.html">SUDC business</a></li>
-                            <li><a href="aboutus.html">Sell on SUDC</a>
-                            <li><a href="history.html">Advertise on SUDC</a></li>
-                            <li><a href="mission.html">Merchant's testimonials</a></li>
-                            <li><a href="causes.html">Merchant's benifits</a></li>
+                            <li><a href="sell_on_sudc.html">Sell on SUDC</a>
+                            <li><a href="advertise.html">Advertise on SUDC</a></li>
+                            <li><a href="merchant_testimonials.html">Merchant's testimonials</a></li>
+                            <li><a href="merchant_benifits.html">Merchant's benifits</a></li>
                         </ul>
                     </div>
                     <div class="col-md-2 col-sm-4 footer_height">
                         <h4>Poloicy info</h4>
                         <ul class="mb20">
                             <li class="active"><a href="index.html">Privacy policy</a></li>
-                            <li><a href="aboutus.html">Terms of use</a>
-                            <li><a href="history.html">Terms of sale</a></li>
+                            <li><a href="terms_of_use.html">Terms of use</a>
+                            <li><a href="terms_of_sale.html">Terms of sale</a></li>
                         </ul>
 
                         <h4>Need help</h4>
                         <ul>
                             <li class="active"><a href="index.html">FAQ</a></li>
-                            <li><a href="aboutus.html">Contact us</a>
-                            <li><a href="history.html">Online query</a></li>
+                            <li><a href="contact_us.html">Contact us</a>
+                            <li><a href="online_query.html">Online query</a></li>
                         </ul>
                     </div>
 
                 </div>
-            </div>
-        </footer>
-        <footer class="footer_bottom">
-            <div class="container">
-                <p>&copy;Sams ultimate discount card - All rights reserved</p>
             </div>
         </footer>
         <div class="upar"></div>
