--- a/shop_detail.html
+++ b/shop_detail.html
@@ -348,7 +348,7 @@
                     <div class="row">
 
                         <div class="dtl_img">
-                            <a href=""><img src="images/banner.png" class="img-responsive"></a>
+                            <a href=""><img src="images/banner_shop_detail.jpg" class="img-responsive"></a>
                         </div>
 
                     </div>
