--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/common.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
+        <script src="js/bootstrap-typeahead.min.js"></script>
         <script src="js/jquery.mockjax.js"></script>
 
     </head>
@@ -274,6 +274,7 @@
                                                 <div class="form-group looking">
                                                     <label for="search">I'm looking for</label>
                                                     <input type="text" class="form-control no-border" id="search" placeholder="Enter your search" />
+                                                    <input type="hidden" name="category" id="category" />
                                                 </div>
                                             </div>
                                             <div class="col-md-5 col-sm-12 col-xs-12 no-padding">
@@ -860,7 +861,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_1.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -879,27 +880,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_2.jpg" class="img-responsive" alt="">
-                                            </div>		
-                                        </a>		
-                                    </figure>	
-                                </div>
-
-                                <div class="description">
-                                    <h6>Was 25% now</h6>
-                                    <h4>5.0% Cash back</h4>
-                                    <a href="#">See all hotel coupons</a>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-sm-6 col-xs-12 arrival-grid">
-                            <div class="grid-arr">
-                                <div class="grid-arrival">
-                                    <figure>		
-                                        <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                            <div class="grid-img">
-                                                <img src="images/T_3.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -919,7 +900,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_4.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -939,7 +920,27 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_5.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
+                                            </div>		
+                                        </a>		
+                                    </figure>	
+                                </div>
+
+                                <div class="description">
+                                    <h6>Was 25% now</h6>
+                                    <h4>5.0% Cash back</h4>
+                                    <a href="#">See all hotel coupons</a>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-6 col-xs-12 arrival-grid">
+                            <div class="grid-arr">
+                                <div class="grid-arrival">
+                                    <figure>		
+                                        <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                            <div class="grid-img">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -984,7 +985,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_7.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -1003,27 +1004,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_8.jpg" class="img-responsive" alt="">
-                                            </div>		
-                                        </a>		
-                                    </figure>	
-                                </div>
-
-                                <div class="description">
-                                    <h6>Was 25% now</h6>
-                                    <h4>5.0% Cash back</h4>
-                                    <a href="#">See all hotel coupons</a>
-                                </div>
-
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-sm-6 col-xs-12 arrival-grid">
-                            <div class="grid-arr">
-                                <div class="grid-arrival">
-                                    <figure>		
-                                        <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
-                                            <div class="grid-img">
-                                                <img src="images/T_9.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -1043,7 +1024,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_10.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -1063,7 +1044,7 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_11.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -1083,7 +1064,27 @@
                                     <figure>		
                                         <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
                                             <div class="grid-img">
-                                                <img src="images/T_12.jpg" class="img-responsive" alt="">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
+                                            </div>		
+                                        </a>		
+                                    </figure>	
+                                </div>
+
+                                <div class="description">
+                                    <h6>Was 25% now</h6>
+                                    <h4>5.0% Cash back</h4>
+                                    <a href="#">See all hotel coupons</a>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-6 col-xs-12 arrival-grid">
+                            <div class="grid-arr">
+                                <div class="grid-arrival">
+                                    <figure>		
+                                        <a href="#" class="new-gri" data-toggle="modal" data-target="#myModal1">
+                                            <div class="grid-img">
+                                                <img src="images/T_6.jpg" class="img-responsive" alt="">
                                             </div>		
                                         </a>		
                                     </figure>	
@@ -1913,16 +1914,40 @@
         */
         var $input = $("#search");
         $input.typeahead({
-            source: [],
-            autoSelect: true,
+            ajax: {
+                url: "/cities/list",
+                timeout: 500,
+                displayField: "name",
+                valueField: 'id',
+                triggerLength: 1,
+                method: "get",
+                loadingClass: "loading-circle",
+                preDispatch: function (query) {
+                    return {
+                        search: query
+                    }
+                },
+                preProcess: function (data) {
+                    // We good!
+                    return data;
+                }
+            },
             valueField: 'id',
-            displayField: 'name'
+            displayField: 'name',
+            onSelect : setCategoryInHidden
         });
+
+        function setCategoryInHidden(item) {
+            alert('You selected <strong>' + item.value + '</strong>: <strong>' + item.text + '</strong>');
+            $("#category").val(item.value);
+        }
+        /*
         $("#search").keyup(function(){
             $.get("/cities/list", function(data){
                 $("#search").typeahead({ source:data});
             },'json');
         });
+*/
 
         loadIpadImages();
     </script>
